tests/__snapshots__/api-toBeUniqueSymbol-stderr.snap.txt
Error: The source type is 'void'.

   9 |   expect(returnsUniqueSymbol()).type.toBeUniqueSymbol();
  10 | 
  11 |   expect(returnsVoid()).type.toBeUniqueSymbol();
     |                              ~~~~~~~~~~~~~~~~
  12 | });
  13 | 
  14 | test("is NOT unique symbol?", () => {

       at ./__typetests__/toBeUniqueSymbol.tst.ts:11:30 ❭ is unique symbol?

Error: The source type is 'unique symbol'.

  15 |   expect(returnsVoid()).type.not.toBeUniqueSymbol();
  16 | 
  17 |   expect(returnsUniqueSymbol()).type.not.toBeUniqueSymbol();
     |                                          ~~~~~~~~~~~~~~~~
  18 | });
  19 | 

       at ./__typetests__/toBeUniqueSymbol.tst.ts:17:42 ❭ is NOT unique symbol?

